<resources>
    <string name="title_app">Video room</string>
    <string name="title_activity_main">Cortex Video Services</string>
    <string name="alt_logo">Logo</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="I_have_not_an_account">I have not an account</string>
    <string name="text_signup">At the moment, registration and password recovery is only available on the cvs.solutions website. Sorry for the inconvenience.</string>
    <string name="prompt_username">EMail</string>
    <string name="prompt_password">Password</string>
    <string name="label_login">Login</string>

    <string name="label_video_conference">Video conference</string>
    <string name="label_logout">Logout</string>
    <string name="label_create">Create conference</string>
    <string name="prompt_display_name">Display name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_allow_anonymous">Allow anonymous</string>
    <string name="text_create_limitation">At the moment, only one current video conference can be created. Enter a description and determine if anonymous users can connect.</string>
    <string name="text_start_limitation">Attention! The time during which you can start the created conference is limited.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_conference">Start</string>
    <string name="invitation_to_clipboard">Copy invitation</string>
    <string name="session_to_clipboard">Invitation to this conference copied to clipboard</string>
    <string name="title_videoroom">Video room</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="paste_invintation">Invitation from clipboard</string>
    <string name="application_settings">Application settings</string>
    <string name="dialog_set_url_text">You can change the server url here.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>