<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="CurrentConferenceBinding">

        <variable
            name="userSession"
            type="solutions.cvs.videoroom.UserSession" />

        <variable
            name="conferenceVM"
            type="solutions.cvs.videoroom.ConferenceVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/form_margin"
        tools:context=".ui.CreateConfFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="21"
                android:maxLines="2"
                android:stateListAnimator="@null"
                android:text="@string/label_video_conference"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                app:iconTint="?attr/colorPrimaryVariant" />

            <Button
                android:id="@+id/button_Logout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:maxLines="2"
                android:onClick="@{()->userSession.doLogout()}"
                android:stateListAnimator="@null"
                android:text="@string/label_logout"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondaryVariant" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="21" />
        </LinearLayout>

        <TextView
            android:id="@+id/textStartLimitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:text="@string/text_start_limitation"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            app:boxBackgroundColor="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStartLimitation">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/prompt_display_name"
                android:inputType="none"
                android:text='@{conferenceVM.displayName}'
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_item_margin"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            app:boxBackgroundColor="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDisplayName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/prompt_description"
                android:inputType="none"
                android:singleLine="false"
                android:text='@{conferenceVM.description}'
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="@{conferenceVM.allowAnonymous}"
            android:clickable="false"
            android:text="@string/prompt_allow_anonymous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox">

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/form_item_margin"
                android:enabled="true"
                android:text="@string/invitation_to_clipboard"
                android:onClick="@{(view)->conferenceVM.copyToClipboard(view)}"/>

            <Button
                android:id="@+id/btnStartConference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/form_item_margin"
                android:enabled="true"
                android:text="@string/start_conference"
                android:onClick="@{(view)->conferenceVM.startConference(view)}" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>